--- a/index.html
+++ b/index.html
@@ -4,16 +4,32 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pagina</title>
+    <title>GRUPO BOCA SAMURAI</title>
+    <link rel="stylesheet" href="estilo.css">
+    
 </head>
 <body>
-    <h1>titulo</h1>
+    <h1>GRUPO BOCA SAMURAI</h1> 
+    <hr>
+    <h1><ul style="list-style-type: none;">
+        <li>INTEGRANTES</li>
+        <li>Franco Bertani</li>
+    <li>Andrés Rubio</li>
+    <li>Matías Ortiz</li>
+    <li>Juan Campora</li>
     
+    </ul></h1>
+    <hr>
+
+   <h2>Modulo 1 - Producción de Textos e Hipertextos</h2>
+   <a href="https://view.officeapps.live.com/op/view.aspx?src=https%3A%2F%2Fraw.githubusercontent.com%2Ffrancobertani%2FTP1_2022%2Fmain%2FMODULO%25201-%2520PRODUCCION%2520DE%2520TEXTOS%2520E%2520HIPERTEXTOS.docx&wdOrigin=BROWSELINK">Informe partes 1 y 2 usando plantilla word
+<a href="http://www.fing.uncu.edu.ar/"><p>Esta es nuestra facultad</p></a>
+<a href="CV.html">CV con plantilla latex</a>
+<a href="https://github.com/francobertani/TP1_2022/blob/main/CV_Ortiz.pdf">Repositorio</a>
 <hr>
-<h2>HOLA</h2>
-<h3>HOLa</h3>
-<b>holaa
-</b>
-<strong>holaa</strong>
+<h2>Módulo 2 - Introducción a lenguajes de programación de alto nivel (paradigma de objetos)</h2>
+<a href=""></a>
+<hr>
+<img src="dscn0958-copia1_1200_750.jpg" alt="">
 </body>
 </html>
