--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
    <h2>Modulo 1 - Producción de Textos e Hipertextos</h2>
    <a href="https://view.officeapps.live.com/op/view.aspx?src=https%3A%2F%2Fraw.githubusercontent.com%2Ffrancobertani%2FTP1_2022%2Fmain%2FMODULO%25201-%2520PRODUCCION%2520DE%2520TEXTOS%2520E%2520HIPERTEXTOS.docx&wdOrigin=BROWSELINK">Informe partes 1 y 2 usando plantilla word
 <a href="http://www.fing.uncu.edu.ar/"><p>Esta es nuestra facultad</p></a>
-<a href="CV.html">CV con plantilla latex</a>
-<a href="https://github.com/francobertani/TP1_2022/blob/main/CV_Ortiz.pdf">Repositorio</a>
+<a href="https://github.com/francobertani/TP1_2022/blob/main/CV.html">CV con plantilla latex</a>
+<a href="https://github.com/francobertani/TP1_2022">Repositorio</a>
 <a href=https://github.com/francobertani/TP1_2022/blob/main/Rese%C3%B1a.pdf>Reseña: Aplicación de la ingeniería e impresión 3d durante y después de la pandemia</a>
 <hr>
 <h2>Módulo 2 - Introducción a lenguajes de programación de alto nivel (paradigma de objetos)</h2>
