--- a/CV.html
+++ b/CV.html
@@ -13,7 +13,7 @@
         <li><a href="https://github.com/francobertani/TP1_2022/blob/main/Campora_Juan_CV.pdf">Campora</a></li>
         <li><a href="https://github.com/francobertani/TP1_2022/blob/main/CV_Ortiz.pdf">Ortiz</a></li>
         <li><a href="https://github.com/francobertani/TP1_2022/blob/main/CV_Andr_s_Rubio.pdf">Rubio</a></li>
-        <li><a href="index.htlm"></a>Volver</li>
+        <li><a href="https://github.com/francobertani/TP1_2022"></a>Volver</li>
     </ul>
 </body>
 </html>
