--- a/index.html
+++ b/index.html
@@ -26,9 +26,12 @@
 <a href="http://www.fing.uncu.edu.ar/"><p>Esta es nuestra facultad</p></a>
 <a href="https://github.com/francobertani/TP1_2022/blob/main/CV.html">CV con plantilla latex</a>
 <a href="https://github.com/francobertani/TP1_2022">Repositorio</a>
-<a href=https://github.com/francobertani/TP1_2022/blob/main/Rese%C3%B1a.pdf>Reseña: Aplicación de la ingeniería e impresión 3d durante y después de la pandemia</a>
+
 <hr>
 <h2>Módulo 2 - Introducción a lenguajes de programación de alto nivel (paradigma de objetos)</h2>
+       
+ <h2>Aplicación de la ingeniería e impresión 3d durante y después de la pandemia</h2>
+  <a href=https://github.com/francobertani/TP1_2022/blob/main/Rese%C3%B1a.pdf>Reseña</a>
 <a href=""></a>
 <hr>
 <img src="dscn0958-copia1_1200_750.jpg" alt="">
