--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
 <hr>
 <h2>Módulo 2 - Introducción a lenguajes de programación de alto nivel (paradigma de objetos)</h2>
        
+       <a href="https://github.com/francobertani/TP1_2022/blob/main/Modulo-2-COMPLETO.pdf2">Ejercicio R en PDF</a>
+       <a href="https://github.com/francobertani/TP1_2022/blob/main/TAREA%20MODULO%202.Rmd">Ejercicio R (codigo)</a>
  <h2>Aplicación de la ingeniería e impresión 3d durante y después de la pandemia</h2>
   <a href=https://github.com/francobertani/TP1_2022/blob/main/Rese%C3%B1a.pdf>Reseña</a>
 <a href=""></a>
