--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <li>Franco Bertani</li>
     <li>Andrés Rubio</li>
     <li>Matías Ortiz</li>
-    <li>Juan Campora</li>
+    <li>Juan Ignacio Cámpora</li>
     
     </ul></h1>
     <hr>
